--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/CypherNyx/node-staff-CMS#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.3.1",
     "inquirer": "^8.2.6",
     "mysql2": "^3.5.2"
